fixed overflow

--- a/japan/style.css
+++ b/japan/style.css
@@ -36,6 +36,7 @@ body {
 	margin: 20px auto;
 	padding: 20px;
 	width: 80%;
+	overflow-x: hidden;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 	transition: all 0.3s;
